--- a/style.css
+++ b/style.css
@@ -1,108 +1,298 @@
-img {
-  position: absolute;
-  top: 170px;
-  right: 830px;
-  padding: 10px;
-  border: 5px solid black;
-  width: 570px;
-
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-h5 {
-  position: absolute;
-  top:50px;
-  right:500px;
-  border:10px;
-  font-family: 'Garamond';
-  font-size: 20px;
-
+html {
+  scroll-behavior: smooth;
 }
-
-h3 {
-  position: absolute;
-  top: 640px;
-  right: 600px;
-  font-family: 'Gerogia';
-  text-align: justify;
-  background-color: pink;
-  opacity: 0.75;
-  color: black;
-  border: 5px solid black;
-
-}
-
-
-h2 {
-  position: absolute;
-  top:250px;
-  right:405px;
-  color: yellow;
-  background-color: pink;
-  font-family: 'Gerogia';
-}
-
-title {
-  font-family: 'Gerogia';
-}
-
-p {
-  font-size: 25px;
-  color: brown;
-}
-
 body {
-  background-color: lightyellow;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url("header-background.jpg");
 }
 
-.customImg{
+
+/* Style the top navigation bar */
+.topnav1 {
+  overflow: hidden;
+}
+/* Style the topnav links */
+.topnav1 a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-right: 70px;
+  float: right;
   position: absolute;
-  right: 600px;
-  top:10px;
-  width: 30px;
-  height: 30px;
+  top: 5%;
+  left: 37%;
+  transform: translate(-50%, -50%);
+
 }
 
-p1 {
+/* Change color on hover */
+.topnav1 a:hover {
+  background-color: #ddd;
   color: black;
+}
+/* Style the top navigation bar */
+.topnav2 {
+  overflow: hidden;
+}
+
+/* Style the topnav links */
+.topnav2 a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-right: 70px;
+  float: right;
   position: absolute;
-  right:125px;
-  top:-245px;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
 }
 
-a {
-  color: purple;
+/* Change color on hover */
+.topnav2 a:hover {
+  background-color: #ddd;
+  color: black;
+}
+/* Style the top navigation bar */
+.topnav3 {
+  overflow: hidden;
+}
+
+/* Style the topnav links */
+.topnav3 a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-right: 70px;
+  float: right;
   position: absolute;
-  top:325px;
-  right:-40px;
-  width: 150px;
-  font-family: 'Garamond';
-  border: 3px solid black;
+  top: 5%;
+  left: 60%;
+  transform: translate(-50%, -50%);
 
 }
 
-.bug{
+/* Change color on hover */
+.topnav4 a:hover {
+  background-color: #ddd;
+  color: black;
+}
+/* Style the top navigation bar */
+.topnav4 {
+  overflow: hidden;
+}
+
+/* Style the topnav links */
+.topnav4 a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-right: 70px;
+  float: right;
   position: absolute;
-  right: 200px;
-  top:70px;
+  top: 5%;
+  left: 70%;
+  transform: translate(-50%, -50%);
+}
+.topnav4 a:hover {
+  background-color: #ddd;
+  color: black;
+}
+/* Style the content */
+.content {
+  padding: 10px;
+  height: 200px; /* Should be removed. Only for demonstration */
 }
 
-button {
-  position: absolute;
-  right: 100px;
-  top: 225px;
-  width: 100px;
-  color: purple;
-  padding: 5px;
-  background-color: yellow;
-  font-family: "century gothic";
-  font-size: 15px;
+.whoami{
+  text-align: center;
+  color: white;
+  font-size: 80px;
+  margin-top: 200px;
+
+    letter-spacing: .1em;
+    text-shadow: 
+      0 -1px 0 #fff, 
+      0 1px 0 #2e2e2e, 
+      0 2px 0 #2c2c2c, 
+      0 3px 0 #2a2a2a, 
+      0 4px 0 #282828, 
+      0 5px 0 #262626, 
+      0 6px 0 #242424, 
+      0 7px 0 #222, 
+      0 8px 0 #202020, 
+      0 9px 0 #1e1e1e, 
+      0 10px 0 #1c1c1c, 
+      0 11px 0 #1a1a1a, 
+      0 12px 0 #181818, 
+      0 13px 0 #161616, 
+      0 14px 0 #141414, 
+      0 15px 0 #121212, 
+      0 22px 30px rgba(0, 0, 0, 0.9);
+}
+.dis{
+  text-align: center;
+  margin-top: 150px;
+  color: white;
+  font-size: 18px;
+  color: #e0dfdc;
+    letter-spacing: .1em;
+    text-shadow: 
+      0 -1px 0 #fff, 
+      0 1px 0 #2e2e2e, 
+      0 2px 0 #2c2c2c, 
+      0 3px 0 #2a2a2a, 
+      0 4px 0 #282828, 
+      0 5px 0 #262626, 
+      0 6px 0 #242424, 
+      0 7px 0 #222, 
+      0 8px 0 #202020, 
+      0 9px 0 #1e1e1e, 
+      0 10px 0 #1c1c1c, 
+      0 11px 0 #1a1a1a, 
+      0 12px 0 #181818, 
+      0 13px 0 #161616, 
+      0 14px 0 #141414, 
+      0 15px 0 #121212, 
+      0 22px 30px rgba(0, 0, 0, 0.9);
+}
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
 }
 
-button:hover {
-  background-color: white;
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
 }
 
-#bug {
-  visibility: hidden;
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook   {
+  color: white;
+  margin-top: 25%;
+  margin-left: 10%;
 }
+
+/* Twitter */
+.fa-twitter {
+  color: white;
+  left: 60%;
+  margin-top: 25%;
+  margin-left: 15%;
+  size: 100px;
+  
+}
+.fa-instagram {
+  color: white;
+  left: 60%;
+  margin-top: 25%;
+  margin-left: 5%;
+  size: 100px;
+  
+}
+
+* {
+  box-sizing: border-box;
+}
+h1 {
+  text-align: center;
+  color: white;
+  margin-top: 250px;
+  font-size: xx-large;
+      color: #2c2c2c;    
+    letter-spacing: .05em;
+    text-shadow: 
+      4px 4px 0px #d5d5d5, 
+      7px 7px 0px rgba(0, 0, 0, 0.2);
+}
+
+#Movie {
+  width: 45%;
+  font-size: large;
+  height: 475px;
+  margin:30px;
+  margin-right:50px;
+  left: 100%;
+  margin-bottom: 70px;
+  line-height: 2;
+  color: gray;
+  text-align: center;
+}
+
+#MovImg {
+  float: right;
+  margin-top: -550px;
+}
+
+#Sound {
+  width: 45%;
+  font-size: large;
+  height: 475px;
+  margin:30px;
+  margin-right:50px;
+  left: 100%;
+  margin-bottom: 70px;
+  line-height: 2;
+  color: gray;
+  text-align: center;
+}
+#SoundImg {
+  float: right;
+  width: 600px;
+  margin-top: -40%;
+}
+#comix {
+  width: 45%;
+  font-size: large;
+  height: 475px;
+  margin:30px;
+  margin-right:50px;
+  left: 100%;
+  margin-bottom: 70px;
+  line-height: 2;
+  color: gray;
+  text-align: center;
+}
+#ComixImg {
+  float: right;
+  width: 600px;
+  margin-top: -40%;
+}
+
+#mv {
+  font-size: large;
+  height: 475px;
+  margin:30px;
+  margin-right:50px;
+  left: 100%;
+  margin-bottom: 70px;
+  line-height: 2;
+  color: gray;
+  text-align: center;
+}
+#MovieImg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  margin-top: -30%;
+};
